# personal-finance

./: .env.example  .gitignore  CALCULO_MANUAL_METRICAS.md  FORMULAS_SALARIO_OBJETIVO.md  PLAN.md  PLAN_REFACTOR_INFLACION.md  README.md  README_COMMANDS.md  TESTING.md  TODO.md  apps_script.js  auth.py  bootstrap.py  compute_market.py  credentials.json  fetch_data.py  fetch_historic.py  fetch_investments.py  fetch_portfolio_evolution.py  fetch_rem.py  generate_columnas_doc.py  ingresos.txt  main.py  mark_ascensos.py  plot_rem_curves.py  pyproject.toml  requirements-dev.txt  salario.csv  setup_analisis.py  setup_analisis_v2.py  setup_dashboard.py  setup_ingresos_replica.py  setup_sheet.py  test_flow.py  update_analisis_ars.py  update_analisis_usd.py  update_daily.sh  update_dataset.sh  update_ingresos_and_analisis.py  upload_investments.py  (+3 more)
.claude/: settings.local.json
automation/: README.md  com.ingresos.daily-update.plist.template  install.sh  uninstall.sh
backend/: personal-finance.db
backend/app/: database.py  main.py
docs/: ANALISIS_V2_README.md  CER_INFLATION_MATCHING.md  COLUMNAS.md  DEFINICION_COLUMNAS_ANALISIS.md  DEPLOYMENT.md  OAUTH_SETUP.md  STRUCTURE_SUMMARY.md  VALIDATION_SCRIPTS.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: analysis.js  api.js  app.js  compute.js  dashboard.js  salary.js
scripts/: import_historical.py
src/: __init__.py  config.py
src/connectors/: __init__.py  ambito.py  bcra.py  dolarapi.py  sheets.py
src/core/: __init__.py  aggregator.py
systemd/: personal-finance-fetch.service  personal-finance-fetch.timer
tests/: e2e_cer_validation.py
(+49 files in other folders)
