[project]
name = "ingresos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gspread>=5.12,<7",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.14.3",
    "urllib3>=2.6.3",
    "yfinance>=1.2.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "xlrd>=2.0.0",
    "sqlalchemy>=2.0",
]

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.11",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # type annotations
    "B",   # bugbear
    "SIM", # simplify
]
ignore = [
    "B008", # false positive for FastAPI Depends/Query in function signatures
]

[tool.ruff.lint.per-file-ignores]
"src/**" = ["ANN"]  # existing code — types are TODO

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
